fix spacing

--- a/src/app/components/Cards.css
+++ b/src/app/components/Cards.css
@@ -9,11 +9,6 @@ div.cards {
   padding: 0px 16px 16px 16px;
 }
 
-div.cards > p {
-  font-size: 16px;
-  line-height: 22px;
-}
-
 div.card {
   flex: 1;
   min-width: 300px;
@@ -23,18 +18,19 @@ div.card {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  gap: 8px;
+  gap: 10px;
   border-radius: 16px;
 }
 
+div.cards > p,
 div.card > p {
   font-size: 16px;
-  line-height: 22px;
+  line-height: 24px;
 }
 
 div.card > p.price-label {
-  font-size: 48px;
-  line-height: 48px;
+  font-size: 52px;
+  line-height: 52px;
   font-weight: 600;
 }
 
